--- a/Code/styles.css
+++ b/Code/styles.css
@@ -1,72 +1,93 @@
-
-thead td {
-    padding-bottom: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
+thead>tr>td{
+    text-align:right;
 
 }
 
+thead td {
+    padding-bottom: 4px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background: lightsteelblue;
+    border-left: solid 1px #000;
+    cursor: s-resize;
+    padding-top:4px;
+
+}
+
+
+
+
 table {
+    table-layout: auto;
     border-collapse: collapse;
-    font: 14px sans-serif;
+    font: 11px sans-serif;
+    border: solid;
+    padding-top:15px;
+
     /*width: 720px;*/
 }
 
 th {
     font-weight: normal;
+    text-align: left;
+    padding-left: 9px;
+    padding-right: 12px;
+    /*min-width: 125px;*/
+    cursor: pointer;
+
+}
+
+td {
+     font-weight: bold;
+    padding-left: 15px;
+    padding-right: 15px;
+     cursor: pointer;
     text-align: right;
-    padding-right: 6px;
-    min-width: 125px;
-
-}
-
-td , th{
-    font-weight: bold;
-    cursor: s-resize;
-    padding-left: 5px;
-    padding-right: 5px;
-
-
-}
-
-
-
-
+ }
 
 tbody tr:first-child td {
-    padding-top: 2px;
+    padding-top: 6px;
+    padding-left: 15px;
+    padding-right: 15px;
+
 }
 
 tbody th{
-    cursor:pointer;
+    padding-top: 5px;
     font-weight: bold;
 
 }
 
 .aggregate{
     color: darkblue;
+    background: #EBEBEB;
+
 }
 
-.game{
-    color: #b1b1b1;
-}
 
 tbody td {
-    padding-right: 5px;
-    padding-left: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
     border-left: solid 1px #000;
     color:black
+
 }
 
-tbody tr:hover {
-    background-color: #dbdbdb;
+/*tr:hover {*/
+     /*background-color: blue !important;*/
+ /*}*/
+
+.trhover {
+    background-color: darkgrey !important;
 }
 
-tbody tr .game {
-    background-color: #f0f0f0;
+tbody tr .project {
+    color: grey;
+    background-color: #fdfdfd;
+    padding-left: 55px;
 }
 
-/*tbody tr .game:hover {*/
+/*tbody tr .project:hover {*/
     /*background-color: #dbdbdb;*/
 /*}*/
 
@@ -96,7 +117,7 @@ h2 {
     color: darkblue;
     padding-bottom: 0;
     margin-top: 3px;
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
 
 h3 {
@@ -112,13 +133,10 @@ header {
     padding: 0.5em;
     /*clear: left;*/
     text-align: center;
+
     height: 100px;
 }
 
-#logo {
-    float: right;
-    height: 100px;
-}
 
 .goalBar{
     opacity:0.6;
@@ -165,10 +183,29 @@ header {
 }
 
 .view {
-    width: 650px;
+    width: 800px;
     padding: 0.5em;
     float: left;
+    resize: both;
+    overflow: auto;
 }
 
+.view2 {
+    width: 500px;
+    padding: 0.5em;
+    float: left;
+    resize: both;
+}
+.even{
+    background-color: #EBEBEB;
+}
+.odd{
+
+}
+
+span.glyphicon-sort{
+    @include "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";
+    font-size: 0.8em;
+}
 
 
