--- a/Code/styles.css
+++ b/Code/styles.css
@@ -223,7 +223,7 @@ span.glyphicon-sort{
     min-width: 300px;
     /*border-style: outset;*/
     /*padding: 12px;*/
-    background: floralwhite;
+    background: ghostwhite;
     color: rgba(0, 0, 0, 0.8);
     border-radius: 5px;
     pointer-events: none;
@@ -289,6 +289,21 @@ span.glyphicon-sort{
 
 .dim {
     opacity: 0.2;
+}
+
+.tabcontent {
+    -webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
 
 
